[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.1.1",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.0.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.10",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.13",
    "python-magic>=0.4.27",
    "streamlit>=1.50.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "unstructured[docx]>=0.18.15",
    "unstructured-client>=0.42.3",
    "python-docx>=1.2.0",
    "lxml>=6.0.2",
    "libmagic>=1.0",
    "python-magic-bin>=0.4.14",
]
